# SecureMediaApp

./: CMakeLists.txt  README.md  ToLower.h  configuration.cpp  configuration.h  main.cpp  resource.h  resources.h  resources.rc
Components/: ExplorerPolicyManager.cpp  ExplorerPolicyManager.h  FirewallManager.cpp  FirewallManager.h  GuiManager.cpp  GuiManager.h  KeyboardHookManager.cpp  KeyboardHookManager.h  NarratorManager.cpp  NarratorManager.h  ProcessMonitor.cpp  ProcessMonitor.h  SoundPlayer.cpp  SoundPlayer.h  TaskSchedulerManager.cpp  TaskSchedulerManager.h  WallpaperManager.cpp  WallpaperManager.h  Watchdog.cpp  Watchdog.h
modules/WUpdateService/: CMakeLists.txt  logger-server.py  main.cpp
